commited my code

--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
               </div> 
               
            </div>
+           <div class="bg-black text-white  mt-4 p-8 rounded-3xl lg:absolute lg:-translate-y-60 left-[52%]">
+            <h1 class="text-2xl font-extrabold mb-3">Meet all the heroes from the field</h1>
+            <p >meet your heroes,” and I can tell you from experience that it’s <br>good advice. I’ve met all of my idols. </p>
+          </div>
              
         </section>
     </header>
